# prometheus-scheduler

./: Dockerfile  deployment.yaml  pyproject.toml  requirements.txt
.github/workflows/: azure-kubernetes-service-kustomize.yml
app/: __init__.py
