[tool.poetry]
name = "prometheus_flask"
version = "0.1.0"
description = ""
authors = ["fhzpdlqk <rozencrants@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.1"
Flask-Cors = "^3.0.10"
prometheus-client = "^0.14.1"
schedule = "^1.1.0"
requests = "^2.28.1"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
